<resources>
    <string name="app_name">优唐</string>
    <string name="price">￥%s/小时</string>
    <string name="plate">提示：第一位是各省的缩写,第二位是代表城市字母。传统汽车只需用字母或数字填写3-7位,新能源汽车需要填写3-8位,按返回键可令键盘消失。</string>


    <!--  pickerView   -->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <!--terms 条款及条件-->
    <string name="terms">南昌优唐科技有限公司（以下称优唐）承诺为会员提供协议约定的各项服务，并根据如下条款规范联合办公室工位的使用。这些条款是为全体会员及优唐的共同利益而制定的，并约定会员与优唐之间的关系。</string>
    <string name="termsone">1.1.本合同的性质： 本合同是一份类似于酒店住宿协议的商业合同。联合办公空间全部为优唐占有并由优唐控制。此合同只对会员发生效力并且不得转让给任何第三方。\n1.2.遵守入驻守则： 会员应当遵守优唐出于健康与安全、防火或其它考虑为空间使用者制定的入驻守则。制定此规定是为了确保安全以及会员将空间作为工作地点的使用。不同空间的入驻守则根据实际情况可能略有不同。\n1.3.合同期内终止： 本合同有效期内，若会员提出提前解除本协议，则优唐不予退还会员所交的租房保证金和服务备用金及其它任何已付费用。除非优唐同意会员提供其它第三方来继续履行会员未完成的合同，则可以退还全部或部分租房保证金和服务备用金。\n1.4.即时终止:在下列任何一种情况下,优唐有权通知会员立即解除本合同，且无需遵守任何其它程序：a.若会员逾期十天以上未交当月服务费用或会员欠款累计达到1000元以上（月服务费用按日折算）；b.会员违反合同义务并无法改正；c.会员自收到优唐要求改正的通知14日内没有改正；d.会员的行为或经会员允许或邀请的其他人的行为不符合对办公室的通常使用（由优唐自行判断）。如果优唐根据以上任何原因终止本协议，会员应履行的义务不同时终止，包括支付己接受服务的费用以及合同剩余期间的全部费用。\n1.5.如果空间无法继续被使用： 如果优唐无法继续为会员提供本协议约定的服务及工作场所，则本协议终止，会员只需支付终止日之前产生的所有费用。优唐应尽力在另一优唐控制的空间为会员找到合适的替换工作场所。\n1.6.合同终止： 会员应迅速将工作场所清空，并将场所恢复至入驻时的情形。会员在迁离时应按照原《物资签收表》的签收情况交还所有物资，如有损坏则照价赔偿。会员需在迁离之前办理完经营许可证照及税务登记等手续的变更或注销，并提供经营许可证照及税务登记等手续的变更或注销证明文件后，方可要求优唐退还其缴纳的保证金。若会员逾期10天未能出具给优唐变更或注销等相关证明文件，则优唐有权扣其保证金。若相关证明文件出具齐全，优唐应在十个工作日内办理完退费。如果会员将任何物品或财产遗留在优唐空间，优唐可以任意处置该物品的收益。如果会员在合同终止后继续使用该工作场所，则会员应为到期未能按时清空办公场所而导致优唐负担的任何损失、主张或责任负责。优唐可自主决定，同意会员延长租期，但会员应支付相应租金和额外罚金。\n1.7.遵守法律： 会员应当守法经营，不得从事任何与使用联合办公空间相关的违法行为。会员不得从事任何可能影响优唐或其他使用联合办公空间的行为，不得引起任何侵扰或妨碍，增加优唐所需负担的额外费用，或给会员使用的联合办公空间所在的建筑物的任何权利人或给优唐造成损失或损害。会员承认前述条款是优唐执行本合同的基础，以及会员任何违反前述条款的行为都将造成实质违约，优唐有权据此终止合同。\n1.8.通知： 所有正式通知均应以书面形式送达上述地址为准。\n1.9.适用法律： 本合同应根据中华人民共和国法律解释并执行。优唐和会员均无条件接受根据中华人民共和国有关法律具有管辖权的法院的管辖。本合同若与其它另行签订的《房屋租赁协议》有所冲突，冲突部分以本协议为准。\n1.10.合同的执行： 会员应当支付优唐为了执行本合同所花费的任何合理且适当的费用，包括律师费。</string>
    <string name="termstwo">2.1.配套办公场所： 优唐应当向会员提供全部配套并附带服务的办公场所，办公场所数量及服务数量依据会员根据本合同同意付费的情况确定。本合同列明了优唐最初为会员分配的办公场所。在特定条件下，优唐可能需要重新分配办公场所，但重新分配的场所应与原场所面积合理相同，且优唐会事先将这种变动通知会员。\n2.2.其他服务： 优唐将根据会员的需要,提供《增值商务服务》列表中所列的服务（部分服务需要另行付费）。\n2.3.优唐网络： 优唐提供的网络资源为所有会员免费共享资源，优唐只针对整体网络进行基本维护，而会员本身电脑问题由会员自行处理。优唐不对会员可获取的网络服务的程度与优劣作任何承诺。</string>
    <string name="termsthree">3.1.进出联合办公空间的人员： 会员应为由会员或者其他经会员明示或暗示的邀请或允许而进入联合办公空间的人（包括但不限于全体员工或其他出现在该场所的人）所造成的损害负责。\n3.2.办公家具及设备： 未经优唐同意，会员不得随意改变原有装修格局及固定设施，也不得安装电缆电线，信息技术设备或电信设备。在优唐同意安装的情况下，会员应当允许优唐监督安装，以确定此种安装不会影响其他会员或优唐或建筑物所有权人对场所的使用。\n3.3.保险： 优唐不提供贵重物品、重要资料的保管服务，如果联合办公空间安排相关人员值班，也不表示为租户提供保管服务。请会员不要在办公室存放贵重物品和现金，否则，遗失自负。为会员带入空间的财产（或会员为其员工或会员为其它第三方的责任）购买保险是会员的职责。优唐强烈建议会员购买相关保险。</string>
    <string name="termsfour">4.1.使用范围： 会员只能将该场所用于办公用途。办公室不得作“零售”或“医辽”等性质使用，包括不得接纳大量公众频繁访问。在任何情况下、租户不得违反消防条例及物业管理规定，不得贮存以下物品于大楼内：易爆、易燃品或有毒、有害危险品；军火武器、弹药；不得饲养动物和禽鸟；政府查禁之物品。\n
4.2.地址的使用： 会员可以将空间的地址用作其注册登记或变更或营业的地址。任何其它使用均应获得优唐的事前同意。会员自合同签订之日起一个月内，需按照行政审批相关要求，在属地办理经营许可证照及税务登记等手续。\n
4.3.标识悬挂： 任何会员未经优唐允许，不得在联合办公空间之公共地方（包括走廊、前台区域、外墙、门窗等地方）悬挂或张贴企业标识、旗贴、广告牌、天线、书写张贴告示或其它装置。\n
4.4.电源的使用： 每个插座的额定功率为500W,会员不得超负荷使用。每次在离开房间时，会员需关闭房间内的灯以及其它电源插头，最后走的会员需同时关闭整层的过道灯（留下长明灯），如发现有未关闭的情况，发现一次视为一次违规，每次违规须向优唐支付罚金50元。</string>
    <string name="termsfive">5.1.优唐的范围： 优唐不对会员与本合同以及会员所接受服务或工作场所相关的任何损失或损害负责，除非此种损失或损害是由于优唐的故意或严重过失所导致的。优唐不因由于机械故障、罢工、延时、员工过错、优唐丧失对办公空间在内的建筑物权益等原因导致优唐无法提供服务而给会员造成的损害负责，除非优唐出于故意或严重过失。在任何情况下，会员应当以书面方式通知优唐并给优唐合理时间改正，否则优唐不为会员的任何损失或损害承担责任。如果会员认为优唐未能提供与本合同约定一致的服务，则会员应以书面方式通知优唐并给予优唐合理期限改正。</string>
    <string name="termssix">6.1.租房保证金： 会员应当在签订合同时支付租房保证金，金额相当于2-3个月的办公空间租金。该租房保证金由优唐负责保管，但不产生任何利息。该租房保证金用于保证会员履行其在本合同项下的租房义务。此笔租房保证金将在会员向优唐履行完合同并结清帐目的情况下返还。合同期内会员不得将租房保证金抵扣任何费用。\n
6.2.服务备用金： 会员应当在签订合同的同时支付不少于500元的服务备用金，该服务备用金由优唐负责保管，但不产生任何利息。该服务备用金收取的目的是为了会员能够及时有效的使用优唐提供的各类虚拟或增值商务服务。将由优唐按会员所交付的全部服务备用金金额授予会员等值信用额度。交付过服务备用金后，会员可在该信用额度内透支其所有产生的虚拟服务费用或代付款费用或增值商务服务费用或办公空间租金费用。如果，会员透支的金额在每一个付款周期内没有超过该会员的信用额度，则该笔透支的金额将在周期性的付款时由会员一次性付清；如果会员透支的金额等于或超过该会员的信用额度时，优唐有权终止为该会员继续提供各类服务。会员需即时支付其已经透支的金额后再次开通服务。\n
6.3.滞纳金： 如果会员未能按时支付到期费用，则每逾期一天，会员应向优唐支付到期应付款额的5‰作为滞纳金。\n
6.4.办公空间租金： 优唐有权不时按市场情况调整月租金价格，但在与会员签订的合同期内，租金按约定不做变化。</string>

</resources>
